frontend/packages/text-editor/src/TextEditor.module.css
.TextEditor {
  background-color: #fff;
  width: 100%;
  height: 100%;
  display: grid;
  gap: 2rem;
  grid-template-columns: auto minmax(20%, 400px);
  justify-items: center;
}

.RightMenu__verticalContent {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.TextEditor__title-md {
  font-size: 2.4rem;
}

.TextEditor__title-sm {
  font-size: 1.6rem;
  font-weight: bold;
}

.RightMenu__sidebar {
  border-left: 1px solid #c9c9c9;
  background: #f4f3f4;
  height: 100%;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  gap: 3rem;
}

.RightMenu__radioGroup {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: space-between;
  border-bottom: 1px solid #bcc7cc;
  margin-top: -2.4rem !important; /* to counteract builtin margin from AltinnRadioGroup - can be removed when we replace with design system components */
  padding-bottom: 1rem;
}

.RightMenu__radio {
  display: flex;
  justify-content: space-between;
}

.TextEditor__topRow {
  border-bottom: 1px solid #bcc7cc;
  margin-bottom: 2rem;
  padding: 2rem 0;
  display:flex;
  justify-content: space-between;
}

.TextEditor__main {
  padding: 2rem 4rem;
  margin: 0 auto;
  width: 100%;
  background-color: #fff;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

